Bug 1090918 - Multiple History items when visiting links and using 'Back', r=bz